@@ -1,7 +1,7 @@
 #!/bin/sh
 # $Id: age-1.in,v 1.3 2002/01/06 10:46:24 ajt Exp $
 set -e
-cd /var/lib/debbugs/spool/db-h
+cd "$(perl -MDebbugs::Config=:config -e 'print $config{spool_dir}')"
 test -f ./-3.log && rm ./-3.log
 test -f ./-2.log && mv ./-2.log ./-3.log
 test -f ./-1.log && mv ./-1.log ./-2.log
